--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Crestline Custom promotional Products</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="banner">
+        <header>
+          <a href="#" class="logo"></a>
+          <ul></ul>
+        </header>
+        <div class="content"></div>
+      </div>
+    </div>
   </body>
 </html>
