--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/theme.css" />
     <title>Crestline Custom promotional Products</title>
   </head>
   <body>
@@ -12,18 +13,24 @@
         <header>
           <a href="#" class="logo"></a>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="#">Apparel</a></li>
+            <li><a href="#">Bags & Totes</a></li>
+            <li><a href="#">Drinkware</a></li>
+            <li><a href="#">Health & Wellness</a></li>
+            <li><a href="#">Home & Auto</a></li>
+            <li><a href="#">Office & Tech</a></li>
+            <li><a href="#">Shop By</a></li>
+            <li><a href="#">Sports & Outdoor</a></li>
+            <li><a href="#">Tradeshow & Events</a></li>
+            <li><a href="#">Writing</a></li>
           </ul>
         </header>
+        <div class="container carousel">
+          <img
+            src="https://cdns.crestline.com/crestline/home_hero_newItems_010620.jpg?q=100"
+            alt=""
+          />
+        </div>
         <div class="content"></div>
       </div>
     </div>
