--- a/index.html
+++ b/index.html
@@ -8,31 +8,46 @@
     <title>Crestline Custom promotional Products</title>
   </head>
   <body>
-    <div class="container">
-      <div class="banner">
-        <header>
-          <a href="#" class="logo"></a>
-          <ul>
-            <li><a href="#">Apparel</a></li>
-            <li><a href="#">Bags & Totes</a></li>
-            <li><a href="#">Drinkware</a></li>
-            <li><a href="#">Health & Wellness</a></li>
-            <li><a href="#">Home & Auto</a></li>
-            <li><a href="#">Office & Tech</a></li>
-            <li><a href="#">Shop By</a></li>
-            <li><a href="#">Sports & Outdoor</a></li>
-            <li><a href="#">Tradeshow & Events</a></li>
-            <li><a href="#">Writing</a></li>
-          </ul>
-        </header>
-        <div class="container carousel">
-          <img
-            src="https://cdns.crestline.com/crestline/home_hero_newItems_010620.jpg?q=100"
-            alt=""
-          />
+    <div class="gutter">
+      <header>
+        <div class="top-nav">
+          <div class="login-items">
+            <ul>
+              <li><a href="#">Welcome Guest</a></li>
+              <li><a href="#">Sign in</a></li>
+              <li><a href="#">Register</a></li>
+              <li><a href="#">Catalog Request</a></li>
+              <li><a href="#">Email Sign-up</a></li>
+              <li><a href="#">Live Chat | 1-866-488-4975</a></li>
+              <li><a href="#">Cart</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="content"></div>
+        <div class="upper-nav"></div>
+        <nav>
+          <div class="menu">
+            <ul>
+              <li><a href="#">Apparel</a></li>
+              <li><a href="#">Bags & Totes</a></li>
+              <li><a href="#">Drinkware</a></li>
+              <li><a href="#">Health & Wellness</a></li>
+              <li><a href="#">Home & Auto</a></li>
+              <li><a href="#">Office & Tech</a></li>
+              <li><a href="#">Shop By</a></li>
+              <li><a href="#">Sports & Outdoor</a></li>
+              <li><a href="#">Tradeshow & Events</a></li>
+              <li><a href="#">Writing</a></li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <div class="container carousel">
+        <img
+          src="https://cdns.crestline.com/crestline/home_hero_newItems_010620.jpg?q=100"
+          alt=""
+        />
       </div>
+      <div class="product-content"></div>
     </div>
   </body>
 </html>
