added sticky nav

--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
   </head>
   <body>
     <div class="gutter">
-      <header>
-        <div class="top-nav">
-          <div class="login-items">
-            <ul>
-              <li><a href="#">Welcome Guest</a></li>
-              <li><a href="#">Sign in</a></li>
-              <li><a href="#">Register</a></li>
-              <li><a href="#">Catalog Request</a></li>
-              <li><a href="#">Email Sign-up</a></li>
-              <li><a href="#">Live Chat | 1-866-488-4975</a></li>
-              <li><a href="#">Cart</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="upper-nav"></div>
+      <header class="login-header">
+        <nav class="top-nav login-items">
+          <ul>
+            <li><a href="#">Welcome Guest</a></li>
+            <li><a href="#">Sign in</a></li>
+            <li><a href="#">Register</a></li>
+            <li><a href="#">Catalog Request</a></li>
+            <li><a href="#">Email Sign-up</a></li>
+            <li><a href="#">Live Chat | 1-866-488-4975</a></li>
+            <li><a href="#">Cart</a></li>
+          </ul>
+        </nav>
+      </header>
+      <header class="menu-header">
         <nav>
           <div class="menu">
             <ul>
