--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://kit.fontawesome.com/eadfd9b262.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/theme.css" />
     <title>Crestline Custom promotional Products</title>
   </head>
@@ -18,24 +22,79 @@
             <li><a href="#">Catalog Request</a></li>
             <li><a href="#">Email Sign-up</a></li>
             <li><a href="#">Live Chat | 1-866-488-4975</a></li>
-            <li><a href="#">Cart</a></li>
+            <li>
+              <a href="#"><i class="fas fa-shopping-cart"></i> Cart(0)</a>
+            </li>
           </ul>
         </nav>
+      </header>
+      <header class="logo-header">
+        <div class="main-logo">
+          <img
+            src="./img/crestlinelogo.png"
+            alt="Crestline Logo"
+            class="crestline-logo"
+          />
+        </div>
+        <div class="wrapper">
+          <div class="search-bar container-search">
+            <div class="container-input">
+              <input
+                type="text"
+                list="psychology_theories_list"
+                id="psychology_theories_search"
+                class="search-term"
+                placeholder="Search..."
+              />
+              <button type="submit" class="search-button" id="selectTheory">
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
+          </div>
+        </div>
       </header>
       <header class="menu-header">
         <nav>
           <div class="menu">
             <ul>
-              <li><a href="#">Apparel</a></li>
-              <li><a href="#">Bags & Totes</a></li>
-              <li><a href="#">Drinkware</a></li>
-              <li><a href="#">Health & Wellness</a></li>
-              <li><a href="#">Home & Auto</a></li>
-              <li><a href="#">Office & Tech</a></li>
-              <li><a href="#">Shop By</a></li>
-              <li><a href="#">Sports & Outdoor</a></li>
-              <li><a href="#">Tradeshow & Events</a></li>
-              <li><a href="#">Writing</a></li>
+              <li>
+                <a href="#">Apparel <i class="fas fa-chevron-down"></i></a>
+              </li>
+              <li>
+                <a href="#">Bags & Totes <i class="fas fa-chevron-down"></i></a>
+              </li>
+              <li>
+                <a href="#">Drinkware <i class="fas fa-chevron-down"></i></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Health & Wellness <i class="fas fa-chevron-down"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#">Home & Auto <i class="fas fa-chevron-down"></i></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Office & Tech <i class="fas fa-chevron-down"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#">Shop By <i class="fas fa-chevron-down"></i></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Sports & Outdoor <i class="fas fa-chevron-down"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Tradeshow & Events <i class="fas fa-chevron-down"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#">Writing <i class="fas fa-chevron-down"></i></a>
+              </li>
             </ul>
           </div>
         </nav>
