added new sections

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/theme.css" />
     <title>Crestline Custom promotional Products</title>
   </head>
-  <body>
+  <body id="top-of-page">
     <div class="gutter">
       <header class="login-header">
         <nav class="top-nav login-items">
@@ -21,9 +21,12 @@
             <li><a href="#">Register</a></li>
             <li><a href="#">Catalog Request</a></li>
             <li><a href="#">Email Sign-up</a></li>
-            <li><a href="#">Live Chat | 1-866-488-4975</a></li>
+            <li><a href="#">Live Chat</a></li>
             <li>
-              <a href="#"><i class="fas fa-shopping-cart"></i> Cart(0)</a>
+              <a href="#"
+                ><i class="fas fa-shopping-cart"></i> Cart
+                <span style="color:#f58220">(0)</span></a
+              >
             </li>
           </ul>
         </nav>
@@ -52,11 +55,17 @@
             </div>
           </div>
         </div>
+        <div class="phone">
+          <a href="tel:18664884975">Call us at 1 866 488 4975</a>
+        </div>
       </header>
       <header class="menu-header">
         <nav>
           <div class="menu">
             <ul>
+              <li class="home-border">
+                <a href="#top-of-page"><i class="fas fa-home"></i></i></a>
+              </li>
               <li>
                 <a href="#">Apparel <i class="fas fa-chevron-down"></i></a>
               </li>
@@ -105,7 +114,41 @@
           alt=""
         />
       </div>
-      <div class="product-content"></div>
+      <div class="product-content">
+        <div class="product">
+          <img src="https://placekitten.com/300/300" alt="kitten" />
+          <p><button>View</button></p>
+        </div>
+        <div class="product">
+          <img src="https://placekitten.com/400/400" alt="kitten" />
+          <p><button>View</button></p>
+        </div>
+        <div class="product">
+          <img src="https://placekitten.com/500/500" alt="kitten" />
+          <p><button>View</button></p>
+        </div>
+        <div class="product">
+          <img src="https://placekitten.com/600/600" alt="kitten" />
+          <p><button>View</button></p>
+        </div>
+        <div class="product">
+          <img src="https://placekitten.com/700/700" alt="kitten" />
+          <p><button>View</button></p>
+        </div>
+        <div class="product">
+          <img src="https://placekitten.com/800/800" alt="kitten" />
+          <p><button>View</button></p>
+        </div>
+        <div class="product">
+          <img src="https://placekitten.com/900/900" alt="kitten" />
+          <p><button>View</button></p>
+        </div>
+        <div class="product">
+          <img src="https://placekitten.com/950/950" alt="kitten" />
+          <p><button>View</button></p>
+        </div>
+      </div>
+      <div class="more-product-content"></div>
     </div>
   </body>
 </html>
