product grid fixed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 list="psychology_theories_list"
                 id="psychology_theories_search"
                 class="search-term"
-                placeholder="Search..."
+                placeholder="Enter item number or search by keyword..."
               />
               <button type="submit" class="search-button" id="selectTheory">
                 <i class="fas fa-search"></i>
@@ -117,38 +117,47 @@
       <div class="product-content">
         <div class="product">
           <img src="https://placekitten.com/300/300" alt="kitten" />
-          <p><button>View</button></p>
+          <button>View</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/400/400" alt="kitten" />
-          <p><button>View</button></p>
+          <button>View</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/500/500" alt="kitten" />
-          <p><button>View</button></p>
+          <button>View</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/600/600" alt="kitten" />
-          <p><button>View</button></p>
+          <button>View</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/700/700" alt="kitten" />
-          <p><button>View</button></p>
+          <button>View</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/800/800" alt="kitten" />
-          <p><button>View</button></p>
+          <button>View</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/900/900" alt="kitten" />
-          <p><button>View</button></p>
+          <button>View</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/950/950" alt="kitten" />
-          <p><button>View</button></p>
+          <button>View</button>
         </div>
       </div>
       <div class="more-product-content"></div>
+      <footer class="footer">
+          <div class="about">
+              <ul>
+                  <li></li>
+              </ul>
+          </div>
+          <div class="customer-service"></div>
+          <div class="social-media"></div>
+      </footer>
     </div>
   </body>
 </html>
