--- a/index.html
+++ b/index.html
@@ -148,16 +148,9 @@
           <button>View</button>
         </div>
       </div>
-      <div class="more-product-content"></div>
-      <footer class="footer">
-          <div class="about">
-              <ul>
-                  <li></li>
-              </ul>
-          </div>
-          <div class="customer-service"></div>
-          <div class="social-media"></div>
-      </footer>
+      <div class="more-product-content">
+          <img src="./img/body_background.png" alt="Body Background">
+      </div>
     </div>
   </body>
 </html>
