--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
       <div class="more-product-content">
           <img src="./img/body_background.png" alt="Body Background">
       </div>
+      <footer></footer>
     </div>
   </body>
 </html>
