--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/theme.css" />
-    <title>Crestline Custom promotional Products</title>
+    <title>DEMO SITE</title>
   </head>
   <body id="top-of-page">
     <div class="gutter">
