--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <header class="logo-header">
         <div class="main-logo">
           <img
-            src="./img/crestlinelogo.png"
-            alt="Crestline Logo"
+            src="./img/logo.png"
+            alt="Logo"
             class="crestline-logo"
           />
         </div>
