--- a/index.html
+++ b/index.html
@@ -117,35 +117,35 @@
       <div class="product-content">
         <div class="product">
           <img src="https://placekitten.com/300/300" alt="kitten" />
-          <button>View</button>
+          <button>Promotional Pens</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/400/400" alt="kitten" />
-          <button>View</button>
+          <button>Table Covers</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/500/500" alt="kitten" />
-          <button>View</button>
+          <button>Padfolios</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/600/600" alt="kitten" />
-          <button>View</button>
+          <button>Water Bottles</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/700/700" alt="kitten" />
-          <button>View</button>
+          <button>Sanitizers</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/800/800" alt="kitten" />
-          <button>View</button>
+          <button>Corporate Gifts</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/900/900" alt="kitten" />
-          <button>View</button>
+          <button>Travel Mugs</button>
         </div>
         <div class="product">
           <img src="https://placekitten.com/950/950" alt="kitten" />
-          <button>View</button>
+          <button>Tech Accessories</button>
         </div>
       </div>
       <div class="more-product-content">
