style changes to header and product section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header class="login-header">
         <nav class="top-nav login-items">
           <ul>
-            <li><a href="#">Welcome Guest</a></li>
+            <li class="welcome"><p>Welcome Guest</p></li>
             <li><a href="#">Sign in</a></li>
             <li><a href="#">Register</a></li>
             <li><a href="#">Catalog Request</a></li>
